...
    override func viewDidAppear(_ animated: Bool) {
        showAlertWhenLaurenceIsHeadedOut()
    }

    func showAlertWhenLaurenceIsHeadedOut()  {
        
        let alertController = UIAlertController.init(title: "Uh oh! He's headed out!", message: "Quick! Jot down your info to be even more direct.", preferredStyle: .alert)
        let okayButton = UIAlertAction.init(title: "Let's Show Him You Mean Business", style: .default, handler: nil)
        alertController.addAction(okayButton)
        self.present(alertController, animated: true, completion: nil)
    }
    override func didReceiveMemoryWarning() {
        super.didReceiveMemoryWarning()
        // Dispose of any resources that can be recreated.
...
